chore(frontend): standardize unified web/flutter/android/ios scaffolding

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ RUST_LOG=info,opensase_payments=debug
 NATS_URL=nats://localhost:4222
 PAYSTACK_SECRET_KEY=your-paystack-secret
 FLUTTERWAVE_SECRET_KEY=your-flutterwave-secret
+
+HASURA_ENDPOINT=https://localhost:8080/v1/graphql
+
+HASURA_ADMIN_SECRET=replace-with-local-secret
+
+AUTH_TOKEN=replace-with-local-token
